<resources>
    <string name="app_name">ReceiptPic</string>
    <string name="familyinfohere">Enter Family Name Here</string>
    <string name="familylabel">Family</string>
    <string name="categorylabel">Enter Categories below</string>
    <string name="add">Add</string>
    <string name="vacationsuitcse">vacationsuitcase</string>
    <string name="people">People</string>
    <string name="new_member">NEW MEMBER</string>
    <string name="capture_picture">Capture Picture</string>
    <string name="vacations">Vacations</string>
    <string name="where_to">Where To:</string>
    <string name="budget">Budget</string>
    <string name="date">Date:</string>
    <string name="infoaboutus">

    App Version: 1
    Developed By: Tatiana tbooth2@pride.hofstra.edu
    </string>
</resources>
