<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vacations"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textSize="30sp"
        android:textColor="#7dbd40"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/where_to"
            android:id="@+id/wheretolabel"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/budget"
            android:id="@+id/budgetlabel"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/date"
            android:id="@+id/traveldatelabel"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="25sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_below="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            />
    </LinearLayout>

    <ImageButton
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageButton"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/camera"
        android:layout_alignParentEnd="false"
        android:onClick="onButtonClick"
        android:forceHasOverlappingRendering="false"
        android:layout_alignParentTop="false"
        android:scaleType="fitCenter"
        />


</RelativeLayout>